--- a/src/AppBundle/Resources/views/Default/search.html.twig
+++ b/src/AppBundle/Resources/views/Default/search.html.twig
@@ -5,9 +5,8 @@
 {% block contents %}
     <section>
     	<div class="container">
-    		<h3>Liste des séries</h3>
-            <div class="row">
-    		{% for show in shows %}
+			<div class="row">
+    		{% for show in allShows %}
             <a href="{{ path('show', {id: show.id}) }}" class="tvshow col-sm-6">
                 <img class="pull-left" src="{{ web_image('uploads/'~show.image).resize(100, 100).png }}" />
                 <h4>{{ show.name }} ({{ show.seasons|length }} saisons)</h4>
@@ -15,13 +14,7 @@
             </a>
     		{% endfor %}
             </div>
-
-    		{% if app.user %}
-    			<a href="{{ path('admin_add_show') }}">Ajouter une série</a>
-    		{% endif %}
-            <div class="navigation">
-                {{ knp_pagination_render(shows) }}
-            </div>
+           
     	</div>
     </section>
 {% endblock %}
